# INDIS

./: .env.example  .gitignore  .gitlab-ci.yml  .markdownlint.json  .spectral.yaml  CLAUDE.md  CONTRIBUTING.md  DEV_SETUP.md  IMPLEMENTATION_PLAN.md  INDIS_PRD_v1.0.md  INDIS_PRD_v1.0_fa.md  INDIS_PRD_v2.0.md  INDIS_PRD_v2.0_fa.md  LICENSE  Makefile  README.md  SECURITY.md  copilot-instructions.md  docker-compose.services.yml  docker-compose.yml  go.work
.github/workflows/: e2e.yml  sdk-codegen.yml
.gitlab/ci/: deploy-prod.yml  deploy-staging.yml  go.yml  python.yml  rust.yml  security.yml
api/: README.md
api/openapi/: openapi.yaml
chaincode/audit-log/: contract.go  go.mod  main.go
chaincode/credential-anchor/: contract.go  go.mod  main.go
chaincode/did-registry/: contract.go  go.mod  main.go
chaincode/electoral/: contract.go  go.mod  main.go
circuits/: README.md
clients/gov-portal/: README.md  index.html  package-lock.json  package.json  vite.config.ts
clients/mobile/: README.md
clients/pwa/: README.md  index.html  package.json  vite.config.ts
clients/verifier/: README.md  index.html  package-lock.json  package.json  vite.config.ts
db/migrations/: 001_create_identity_tables.sql  002_create_credential_tables.sql  003_create_enrollment_tables.sql  004_create_biometric_tables.sql  005_create_notification_tables.sql  006_create_electoral_tables.sql  007_create_justice_tables.sql  008_add_remote_ballot_metadata.sql  009_align_electoral_schema_with_service.sql  010_add_remote_nonce_uniqueness.sql  011_social_attestation_constraint.sql
deploy/: README.md
deploy/prometheus/: alerts.yml  prometheus.yml
deploy/terraform/: main.tf  outputs.tf  variables.tf
docs/: README.md
docs/architecture/: README.md
docs/security/: README.md  mtls.md
pkg/blockchain/: adapter.go  fabric.go  fabric_test.go  factory.go  go.mod  mock.go
pkg/cache/: go.mod  redis.go  revocation.go
pkg/crypto/: crypto.go  crypto_test.go  dilithium.go  dilithium_circl.go  dilithium_test.go  go.mod  pqc.go
pkg/did/: did.go  did_test.go  go.mod
pkg/events/: consumer.go  events.go  go.mod  go.sum  producer.go
pkg/hsm/: factory.go  (+6 more)
scripts/: gen-certs.sh  generate_pdf.py  proto-gen.sh
services/ai/: Dockerfile  README.md  pyproject.toml
services/ai/src/: __init__.py  main.py
services/ai/src/biometric/: __init__.py  dedup.py  models.py  router.py
services/ai/src/fraud/: __init__.py
services/ai/tests/: test_biometric_router.py
services/zkproof/: Cargo.toml  Dockerfile  README.md
services/zkproof/crates/zkproof-circuits/: Cargo.toml
services/zkproof/crates/zkproof-circuits/src/: electoral_stark.rs  lib.rs
services/zkproof/crates/zkproof-core/: Cargo.toml
services/zkproof/crates/zkproof-core/src/: bulletproofs.rs  groth16.rs  lib.rs  stark.rs
services/zkproof/crates/zkproof-core/src/circuits/: age_range.rs  credential_validity.rs  mod.rs  voter_eligibility.rs
services/zkproof/crates/zkproof-server/: Cargo.toml
services/zkproof/crates/zkproof-server/src/: main.rs
(+485 files in other folders)
