[project]
name = "indis-ai"
version = "0.1.0"
description = "INDIS AI/ML Service — biometric deduplication and fraud detection"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "numpy>=1.26",
    "onnxruntime>=1.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
    "mypy>=1.8",
]
ml = [
    "torch>=2.2",
    "scikit-learn>=1.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
