[workspace]
members = [
    "crates/zkproof-server",
    "crates/zkproof-core",
    "crates/zkproof-circuits",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/mohamadsolouki/INDIS"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.11"
prost = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"
