[package]
name = "zkproof-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha3 = "0.10"
winterfell = "0.8"
ark-bn254 = "0.4"
ark-ff = "0.4"
ark-groth16 = "0.4"
ark-r1cs-std = "0.4"
ark-relations = "0.4"
ark-serialize = "0.4"
rand = "0.8"
rand_chacha = "0.3"
base64 = "0.22"
