[package]
name = "zkproof-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zkproof-core = { path = "../zkproof-core" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
