[package]
name = "zkproof-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zkproof-core = { path = "../zkproof-core" }
zkproof-circuits = { path = "../zkproof-circuits" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# Serialization
base64 = "0.22"

# Crypto placeholders
sha3 = "0.10"
rand = "0.8"
